--- a/sub3.html
+++ b/sub3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
@@ -39,7 +39,7 @@
         </div>
     </div>
     <div class="review-content">
-        <a href="#" class="write">+</a>
+        <a href="#" id="WriteBtn">후기작성</a>
         <ul>
             <li class="box">
                 <div class="img-box"><img src="../특산품/거제시_유자.jpg" alt=""></div>
