--- a/sub1.html
+++ b/sub1.html
@@ -126,7 +126,7 @@
 
             <div class="text">
                 <div class="list">
-                    <img src="./특산품/창원시_풋고추.jpg" alt="" class="spclBty">
+                    <img src="./특산품/창원시_풋고추.jpg" alt="" >
                     <h2>시군명</h2>
                     <h3>- 창원시</h3>
                     <h2>대표농특산품</h2>
