--- a/sub3.html
+++ b/sub3.html
@@ -11,6 +11,20 @@
 </head>
 
 <body>
+    <div id="ModalBg">
+        <div>
+            <span>이름 <input type="text" name="name" id="name" placeholder="이름을 입력해주세요"></span>
+            <span>구매품 <input type="text" name="stock" id="stock" placeholder="구매품을 입력해주세요"></span>
+            <span>구매처<input type="text" name="buyArea" id="buyArea" placeholder="구매처를 입력해주세요"></span>
+            <span>구매일<input type="text" name="buyDate" id="buyDate" placeholder="구매일을 입력해주세요"></span>
+            <span>내용<input type="text" name="contents" id="contents" placeholder="내용을 입력해주세요"></span>
+            <span>별점<input type="" name="contents" id="contents" placeholder=""></span>
+            <span>사진 등록<input type="file" name="img" accept="image/jpg"></span>
+
+            <input type="submit" value="후기등록">
+           
+        </div>
+    </div>
     <header id="header">
         <div class="logo"><img src="./img/logo.png" alt=""></div>
         <ul class="nav">
