modal창 js업데이트

--- a/sub3.html
+++ b/sub3.html
@@ -11,8 +11,9 @@
 </head>
 
 <body>
-    <div id="ModalBg">
-        <div>
+    <div id="modal">
+        <div id="modalBackground"></div>
+        <div id="modalItem">
             <span>이름 <input type="text" name="name" id="name" placeholder="이름을 입력해주세요"></span>
             <span>구매품 <input type="text" name="stock" id="stock" placeholder="구매품을 입력해주세요"></span>
             <span>구매처<input type="text" name="buyArea" id="buyArea" placeholder="구매처를 입력해주세요"></span>
@@ -22,7 +23,6 @@
             <span>사진 등록<input type="file" name="img" accept="image/jpg"></span>
 
             <input type="submit" value="후기등록">
-           
         </div>
     </div>
     <header id="header">
@@ -220,6 +220,8 @@
     <footer>
         <p>Copyright (C) Gyeongsangbuk-do. All Rights Reserved.</p>
     </footer>
+    
+    <script src="./js/sub3.js"></script>
 </body>
 
 </html>
