update: 전체적인 폴더 구조 변경

--- a/html/admin/eventMng.html
+++ b/html/admin/eventMng.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이벤트 관리</title>
-    <link rel="stylesheet" href="./css/eventMng.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../../css/admin/eventMng.css">
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body>
     <aside>
         <div class="logo">
-            <img src="../img/logo.png" alt="">
+            <img src="../../img/logo.png" alt="">
             <input id="logoutBtn" type="button" value="로그아웃">
         </div>
         <div class="menu">
-            <a href="./spcMng.html">특산물 관리</a>
+            <a href="../../spcMng.html">특산물 관리</a>
             <a href="#">이벤트 관리</a>
         </div>
     </aside>
@@ -37,42 +37,42 @@
             </thead>
             <tr>
                 <th>1</th>
-                <td><img src="../특산품/창원시_풋고추.jpg" alt=""></td>
+                <td><img src="../../특산품/창원시_풋고추.jpg" alt=""></td>
                 <td>L001</td>
                 <td>창원시</td>
                 <td>풋고추</td>
             </tr>
             <tr>
                 <th>1</th>
-                <td><img src="../특산품/창원시_풋고추.jpg" alt=""></td>
+                <td><img src="../../특산품/창원시_풋고추.jpg" alt=""></td>
                 <td>L001</td>
                 <td>창원시</td>
                 <td>풋고추</td>
             </tr>
             <tr>
                 <th>1</th>
-                <td><img src="../특산품/창원시_풋고추.jpg" alt=""></td>
+                <td><img src="../../특산품/창원시_풋고추.jpg" alt=""></td>
                 <td>L001</td>
                 <td>창원시</td>
                 <td>풋고추</td>
             </tr>
             <tr>
                 <th>1</th>
-                <td><img src="../특산품/창원시_풋고추.jpg" alt=""></td>
+                <td><img src="../../특산품/창원시_풋고추.jpg" alt=""></td>
                 <td>L001</td>
                 <td>창원시</td>
                 <td>풋고추</td>
             </tr>
             <tr>
                 <th>1</th>
-                <td><img src="../특산품/창원시_풋고추.jpg" alt=""></td>
+                <td><img src="../../특산품/창원시_풋고추.jpg" alt=""></td>
                 <td>L001</td>
                 <td>창원시</td>
                 <td>풋고추</td>
             </tr>
             <tr>
                 <th>1</th>
-                <td><img src="../특산품/창원시_풋고추.jpg" alt=""></td>
+                <td><img src="../../특산품/창원시_풋고추.jpg" alt=""></td>
                 <td>L001</td>
                 <td>창원시</td>
                 <td>풋고추</td>
