--- a/html/index.html
+++ b/html/index.html
@@ -5,45 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>경상남도</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body id="Over">
     <header>
-        <div class="logo"><img src="./img/logo.png" alt=""></div>
+        <div class="logo"><img src="../img/logo.png" alt=""></div>
         <ul class="nav">
             <li id="share">
-                <img src="./img/share.png" alt="">
+                <img src="../img/share.png" alt="">
                 <div class="share-nav">
                     <ul>
-                        <li><a href="#"><img src="./img/instagram.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/facebook.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/t.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/youtube.png" alt=""></a></li>
+                        <li><a href="#"><img src="../img/instagram.png" alt=""></a></li>
+                        <li><a href="#"><img src="../img/facebook.png" alt=""></a></li>
+                        <li><a href="#"><img src="../img/t.png" alt=""></a></li>
+                        <li><a href="#"><img src="../img/youtube.png" alt=""></a></li>
                     </ul>
                 </div>
             </li>
-            <li><img src="./img/menu.png" alt=""></li>
+            <li><img src="../img/menu.png" alt=""></li>
         </ul>
     </header>
     <div class="banner">
-        <div class="slogan-bg"><img src="./img/slogan.png" alt="" class="slogan"></div>
+        <div class="slogan-bg"><img src="../img/slogan.png" alt="" class="slogan"></div>
         <div class="slogan-img"></div>
     </div>
     <div class="content">
         <div>
             <h1>특산물 안내</h1>
             <p>경상남도 18개의 시군에 특산물을 <br> 지도를 통해 한눈에 확인해보세요</p>
-            <a href="./sub1.html" class="shr">▶</a>
+            <a href="../sub1.html" class="shr">▶</a>
         </div>
         <div>
              <h1>이벤트</h1>
             <p>경상남도 18개의 시군에 특산물을 <br> 재밌는 카드게임을 통해 외워보세요</p>
-            <a href="./sub2.html" class="shr">▶</a>
+            <a href="../sub2.html" class="shr">▶</a>
         </div>
         <div>
              <h1>구매후기</h1>
             <p>경상남도 18개의 시군에 특산물을 <br> 구매한 사람들의 후기를 들어보세요</p>
-            <a href="./sub3.html" class="shr">▶</a>
+            <a href="../sub3.html" class="shr">▶</a>
         </div>
     </div>
     <footer>
