--- a/html/sub1.html
+++ b/html/sub1.html
@@ -6,26 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>특산물 안내</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/sub1.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/sub1.css">
 </head>
 
 <body>
     <header>
-        <div class="logo"><img src="./img/logo.png" alt=""></div>
+        <div class="logo"><img src="../img/logo.png" alt=""></div>
         <ul class="nav">
             <li id="share">
-                <img src="./img/share.png" alt="">
+                <img src="../img/share.png" alt="">
                 <div class="share-nav">
                     <ul>
-                        <li><a href="#"><img src="./img/instagram.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/facebook.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/t.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/youtube.png" alt=""></a></li>
+                        <li><a href="#"><img src="../img/instagram.png" alt=""></a></li>
+                        <li><a href="#"><img src="../img/facebook.png" alt=""></a></li>
+                        <li><a href="#"><img src="../img/t.png" alt=""></a></li>
+                        <li><a href="#"><img src="../img/youtube.png" alt=""></a></li>
                     </ul>
                 </div>
             </li>
-            <li><img src="./img/menu.png" alt=""></li>
+            <li><img src="../img/menu.png" alt=""></li>
         </ul>
     </header>
     <div class="banner">
@@ -126,7 +126,7 @@
 
             <div class="text">
                 <div class="list">
-                    <img src="./특산품/창원시_풋고추.jpg" alt="" >
+                    <img src="../특산품/창원시_풋고추.jpg" alt="" >
                     <h2>시군명</h2>
                     <h3>- 창원시</h3>
                     <h2>대표농특산품</h2>
