--- a/html/admin/spcMng.html
+++ b/html/admin/spcMng.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>특산물 관리</title>
-    <link rel="stylesheet" href="./css/spcMng.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../../css/admin/spcMng.css">
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body>
     <aside>
         <div class="logo">
-            <img src="../img/logo.png" alt="">
+            <img src="../../img/logo.png" alt="">
             <input id="logoutBtn" type="button" value="로그아웃">
         </div>
         <div class="menu">
@@ -51,42 +51,42 @@
             </thead>
             <tr>
                 <th>1</th>
-                <td><img src="../특산품/창원시_풋고추.jpg" alt=""></td>
+                <td><img src="../../특산품/창원시_풋고추.jpg" alt=""></td>
                 <td>L001</td>
                 <td>창원시</td>
                 <td>풋고추</td>
             </tr>
             <tr>
                 <th>1</th>
-                <td><img src="../특산품/창원시_풋고추.jpg" alt=""></td>
+                <td><img src="../../특산품/창원시_풋고추.jpg" alt=""></td>
                 <td>L001</td>
                 <td>창원시</td>
                 <td>풋고추</td>
             </tr>
             <tr>
                 <th>1</th>
-                <td><img src="../특산품/창원시_풋고추.jpg" alt=""></td>
+                <td><img src="../../특산품/창원시_풋고추.jpg" alt=""></td>
                 <td>L001</td>
                 <td>창원시</td>
                 <td>풋고추</td>
             </tr>
             <tr>
                 <th>1</th>
-                <td><img src="../특산품/창원시_풋고추.jpg" alt=""></td>
+                <td><img src="../../특산품/창원시_풋고추.jpg" alt=""></td>
                 <td>L001</td>
                 <td>창원시</td>
                 <td>풋고추</td>
             </tr>
             <tr>
                 <th>1</th>
-                <td><img src="../특산품/창원시_풋고추.jpg" alt=""></td>
+                <td><img src="../../특산품/창원시_풋고추.jpg" alt=""></td>
                 <td>L001</td>
                 <td>창원시</td>
                 <td>풋고추</td>
             </tr>
             <tr>
                 <th>1</th>
-                <td><img src="../특산품/창원시_풋고추.jpg" alt=""></td>
+                <td><img src="../../특산품/창원시_풋고추.jpg" alt=""></td>
                 <td>L001</td>
                 <td>창원시</td>
                 <td>풋고추</td>
