--- a/html/sub3.html
+++ b/html/sub3.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>구매후기</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/sub3.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/sub3.css">
 </head>
 
 <body>
@@ -31,20 +31,20 @@
         </div>
     </div>
     <header id="header">
-        <div class="logo"><img src="./img/logo.png" alt=""></div>
+        <div class="logo"><img src="../img/logo.png" alt=""></div>
         <ul class="nav">
             <li id="share">
-                <img src="./img/share.png" alt="">
+                <img src="../img/share.png" alt="">
                 <div class="share-nav">
                     <ul>
-                        <li><a href="#"><img src="./img/instagram.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/facebook.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/t.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/youtube.png" alt=""></a></li>
+                        <li><a href="#"><img src="../img/instagram.png" alt=""></a></li>
+                        <li><a href="#"><img src="../img/facebook.png" alt=""></a></li>
+                        <li><a href="#"><img src="../img/t.png" alt=""></a></li>
+                        <li><a href="#"><img src="../img/youtube.png" alt=""></a></li>
                     </ul>
                 </div>
             </li>
-            <li><img src="./img/menu.png" alt=""></li>
+            <li><img src="../img/menu.png" alt=""></li>
         </ul>
     </header>
     <div class="banner">
@@ -226,7 +226,7 @@
         <p>Copyright (C) Gyeongsangbuk-do. All Rights Reserved.</p>
     </footer>
     
-    <script src="./js/sub3.js"></script>
+    <script src="../js/sub3.js"></script>
 </body>
 
 </html>
