--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
         <ul class="nav">
             <li id="share">
                 <img src="../img/share.png" alt="">
-                <div class="share-nav">
+                <div class="sub-nav">
                     <ul>
                         <li><a href="#"><img src="../img/instagram.png" alt=""></a></li>
                         <li><a href="#"><img src="../img/facebook.png" alt=""></a></li>
@@ -22,7 +22,23 @@
                     </ul>
                 </div>
             </li>
-            <li><img src="../img/menu.png" alt=""></li>
+            <li>
+                <input type="checkbox" id="menu-icon">
+                <label for="menu-icon">
+                        <span id="open"><img src="../img/menu.png" alt=""></span>
+                    
+                    <span id="colse">X</span>
+                        <div class="sub-nav">
+                            <ul id="menu">
+                                <li><a href="./index.html">홈</a></li>
+                                <li><a href="./sub1.html">특산물 안내</a></li>
+                                <li><a href="./sub2.html">이벤트</a></li>
+                                <li><a href="./sub3.html">구매후기</a></li>
+                            </ul>
+                        </div>
+
+                </label>
+            </li>
         </ul>
     </header>
     <div class="banner">
@@ -33,17 +49,17 @@
         <div>
             <h1>특산물 안내</h1>
             <p>경상남도 18개의 시군에 특산물을 <br> 지도를 통해 한눈에 확인해보세요</p>
-            <a href="../sub1.html" class="shr">▶</a>
+            <a href="./sub1.html" class="shr">▶</a>
         </div>
         <div>
              <h1>이벤트</h1>
             <p>경상남도 18개의 시군에 특산물을 <br> 재밌는 카드게임을 통해 외워보세요</p>
-            <a href="../sub2.html" class="shr">▶</a>
+            <a href="./sub2.html" class="shr">▶</a>
         </div>
         <div>
              <h1>구매후기</h1>
             <p>경상남도 18개의 시군에 특산물을 <br> 구매한 사람들의 후기를 들어보세요</p>
-            <a href="../sub3.html" class="shr">▶</a>
+            <a href="./sub3.html" class="shr">▶</a>
         </div>
     </div>
     <footer>
