--- a/html/sub3.html
+++ b/html/sub3.html
@@ -30,12 +30,12 @@
             <input type="submit" value="후기등록">
         </div>
     </div>
-    <header id="header">
+    <header>
         <div class="logo"><img src="../img/logo.png" alt=""></div>
         <ul class="nav">
             <li id="share">
                 <img src="../img/share.png" alt="">
-                <div class="share-nav">
+                <div class="sub-nav">
                     <ul>
                         <li><a href="#"><img src="../img/instagram.png" alt=""></a></li>
                         <li><a href="#"><img src="../img/facebook.png" alt=""></a></li>
@@ -44,7 +44,23 @@
                     </ul>
                 </div>
             </li>
-            <li><img src="../img/menu.png" alt=""></li>
+            <li>
+                <input type="checkbox" id="menu-icon">
+                <label for="menu-icon">
+                        <span id="open"><img src="../img/menu.png" alt=""></span>
+                    
+                    <span id="colse">X</span>
+                        <div class="sub-nav">
+                            <ul id="menu">
+                                <li><a href="./index.html">홈</a></li>
+                                <li><a href="./sub1.html">특산물 안내</a></li>
+                                <li><a href="./sub2.html">이벤트</a></li>
+                                <li><a href="./sub3.html">구매후기</a></li>
+                            </ul>
+                        </div>
+
+                </label>
+            </li>
         </ul>
     </header>
     <div class="banner">
