--- a/html/sub2.html
+++ b/html/sub2.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<div class="sub2">
+    <!DOCTYPE html>
 <html lang="ko">
 
 <head>
@@ -7,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이벤트</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/sub2.css">
 </head>
 
 <body>
@@ -152,3 +152,4 @@
 </body>
 
 </html>
+</div>
