--- a/html/sub3.html
+++ b/html/sub3.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<div class="sub3">
+    <!DOCTYPE html>
 <html lang="ko">
 
 <head>
@@ -7,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>구매후기</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/sub3.css">
 </head>
 
 <body>
@@ -246,3 +246,4 @@
 </body>
 
 </html>
+</div>
