--- a/html/sub1.html
+++ b/html/sub1.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<div class="sub1">
+    <!DOCTYPE html>
 <html lang="ko">
 
 <head>
@@ -7,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>특산물 안내</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/sub1.css">
 </head>
 
 <body>
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-    <div class="sub-content">
+    <div class="sub1-content">
         <div class="box">
             <?xml version="1.0" encoding="UTF-8"?>
             <svg id="map" width="710" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 841.86 746.59">
@@ -161,3 +161,4 @@
 </body>
 
 </html>
+</div>
