--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body id="Over">
     <header>
-        <div class="logo"><img src="../img/logo.png" alt=""></div>
+        <a href="./index.html" class="logo"><img src="../img/logo.png" alt=""></a>
         <ul class="nav">
             <li id="share">
                 <img src="../img/share.png" alt="">
@@ -30,7 +30,6 @@
                     <span id="colse">X</span>
                         <div class="sub-nav">
                             <ul id="menu">
-                                <li><a href="./index.html">홈</a></li>
                                 <li><a href="./sub1.html">특산물 안내</a></li>
                                 <li><a href="./sub2.html">이벤트</a></li>
                                 <li><a href="./sub3.html">구매후기</a></li>
