--- a/html/sub3.html
+++ b/html/sub3.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>구매후기</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="manifest" href="/docs/5.0/assets/img/favicons/manifest.json">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
         </div>
     </div>
     <header>
-        <div class="logo"><img src="../img/logo.png" alt=""></div>
+        <a href="./index.html" class="logo"><img src="../img/logo.png" alt=""></a>
         <ul class="nav">
             <li id="share">
                 <img src="../img/share.png" alt="">
@@ -52,7 +53,6 @@
                     <span id="colse">X</span>
                         <div class="sub-nav">
                             <ul id="menu">
-                                <li><a href="./index.html">홈</a></li>
                                 <li><a href="./sub1.html">특산물 안내</a></li>
                                 <li><a href="./sub2.html">이벤트</a></li>
                                 <li><a href="./sub3.html">구매후기</a></li>
