review 모달창 수정

--- a/html/sub2.html
+++ b/html/sub2.html
@@ -47,7 +47,7 @@
         </header>
 
         <div class="message-modal d-none">
-            <div class="alert alert-primary">
+            <div class="alert">
               이벤트에 참여해 주셔서 감사합니다!
             </div>
           </div>
